Implementação de token jwt para autenticação

--- a/AvaliacaoQuestor.API/appsettings.json
+++ b/AvaliacaoQuestor.API/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "AvaliacaoQuestorDB": "Host=localhost;Port=5432;Pooling=true;Database=banco;User Id=postgres;Password=12345;"
+        "AvaliacaoQuestorDB": "Host=localhost;Port=5432;Pooling=true;Database=banco3;User Id=postgres;Password=12345;"
     },
     "Logging": {
         "LogLevel": {
@@ -8,5 +8,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "JWT": {
+        "ValidAudience": "http://localhost:4200",
+        "ValidIssuer": "http://localhost:5000",
+        "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+    }
 }
